// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XCM tests for Mangata <-> Kusama Kusama transfer assets to mangata 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 8998062739837,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`XCM tests for Mangata <-> Kusama Kusama transfer assets to mangata 2`] = `
{
  "free": 10999346450000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`XCM tests for Mangata <-> Kusama mangata transfer assets to kusama 1`] = `
{
  "free": 9000000000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`XCM tests for Mangata <-> Kusama mangata transfer assets to kusama 2`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 10999921672574,
  "frozen": 0,
  "reserved": 0,
}
`;
